--- a/Frontend/book-app-front/src/app/book-tile/book-tile.component.css
+++ b/Frontend/book-app-front/src/app/book-tile/book-tile.component.css
@@ -7,8 +7,10 @@
 
 .book-image {
     display: block;
-    border-radius: 20px;
+    border-radius: 20px 20px 5px 5px;
     margin: 0 auto;
+    width: 100%;
+    object-fit: cover;
 }
 
 .book-info {
